Fix overlapping titles in PDF header

--- a/styles/pdf.css
+++ b/styles/pdf.css
@@ -28,7 +28,7 @@ li.toc span.inner{
 .pdf-header .left {
     float: left;
     font-size: 0.1em;
-    width: 50%;
+    width: 60%;
     height: 15px;
     margin-top: 15px;
 }
@@ -45,7 +45,7 @@ li.toc span.inner{
 .pdf-header .right {
     float: right;
     font-size: 0.1em;
-    width: 50%;
+    width: 40%;
     height: 15px;
     text-align: right;
 }
